[gd_scene load_steps=4 format=3 uid="uid://b7d7cuax4oofa"]

[ext_resource type="Script" path="res://morte.gd" id="1_s82ox"]
[ext_resource type="Texture2D" uid="uid://boc3tuavu510j" path="res://Assets/Nero.png" id="2_mkour"]
[ext_resource type="AudioStream" uid="uid://dk2vuoahds5it" path="res://Sonoro/MortePlayer.mp3" id="3_b2ica"]

[node name="Morte" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_s82ox")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_mkour")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -114.5
offset_top = -77.0
offset_right = 114.5
offset_bottom = 77.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -91.0
offset_top = -54.5
offset_right = 91.0
offset_bottom = 54.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Sei morto"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Retry" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Riprova"

[node name="Main men첫" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Ritorna al men첫 principale"

[node name="Exit" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Esci
"

[node name="Morte" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_b2ica")
bus = &"Master morte player"

[connection signal="pressed" from="Panel/VBoxContainer/Retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Main men첫" to="." method="_on_main_men첫_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
